started wrds.ibes module

--- a/nbs/01_wrds/06_ibes.ipynb
+++ b/nbs/01_wrds/06_ibes.ipynb
@@ -982,6 +982,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "ltg = download(permno_match_score=(1,2), start_date='01/01/2019', end_date='01/01/2022', obs_limit=1000)\n",
     "ltg"
    ]
@@ -1229,6 +1230,7 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "annual = download(fpi=('1','2','3','4'), obs_limit=1000)\n",
     "annual"
    ]
@@ -1476,222 +1478,9 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
     "quarterly = download(fpi=('6','7','8','9'), obs_limit=1000)\n",
     "quarterly"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>anndats</th>\n",
-       "      <th>value</th>\n",
-       "      <th>fpedats</th>\n",
-       "      <th>revdats</th>\n",
-       "      <th>actdats</th>\n",
-       "      <th>estimator</th>\n",
-       "      <th>analys</th>\n",
-       "      <th>permno</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0001</td>\n",
-       "      <td>2019-01-04</td>\n",
-       "      <td>-174.4</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-01-04</td>\n",
-       "      <td>2019-01-04</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>48368.0</td>\n",
-       "      <td>14392.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0001</td>\n",
-       "      <td>2019-01-24</td>\n",
-       "      <td>-173.7</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-01-24</td>\n",
-       "      <td>2019-01-24</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>48368.0</td>\n",
-       "      <td>14392.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0001</td>\n",
-       "      <td>2019-03-17</td>\n",
-       "      <td>-174.4</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-03-17</td>\n",
-       "      <td>2019-03-17</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>48368.0</td>\n",
-       "      <td>14392.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>000R</td>\n",
-       "      <td>2019-08-15</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-12-20</td>\n",
-       "      <td>2019-08-15</td>\n",
-       "      <td>481.0</td>\n",
-       "      <td>114029.0</td>\n",
-       "      <td>14378.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>000Y</td>\n",
-       "      <td>2019-09-18</td>\n",
-       "      <td>-84.4</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2019-09-24</td>\n",
-       "      <td>2019-09-24</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>162718.0</td>\n",
-       "      <td>14436.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>00UX</td>\n",
-       "      <td>2019-12-17</td>\n",
-       "      <td>-2.7</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2020-01-20</td>\n",
-       "      <td>2019-12-17</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>107332.0</td>\n",
-       "      <td>15647.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>00UX</td>\n",
-       "      <td>2020-02-11</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2020-02-12</td>\n",
-       "      <td>2020-02-12</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>107332.0</td>\n",
-       "      <td>15647.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>00UX</td>\n",
-       "      <td>2020-02-21</td>\n",
-       "      <td>7.1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2020-03-16</td>\n",
-       "      <td>2020-02-21</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>107332.0</td>\n",
-       "      <td>15647.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>00UX</td>\n",
-       "      <td>2020-03-25</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2020-03-25</td>\n",
-       "      <td>2020-03-25</td>\n",
-       "      <td>183.0</td>\n",
-       "      <td>107332.0</td>\n",
-       "      <td>15647.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>00UX</td>\n",
-       "      <td>2020-03-27</td>\n",
-       "      <td>14.3</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2020-03-27</td>\n",
-       "      <td>2020-03-27</td>\n",
-       "      <td>3037.0</td>\n",
-       "      <td>136937.0</td>\n",
-       "      <td>15647.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1000 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    ticker     anndats  value fpedats     revdats     actdats  estimator  \\\n",
-       "0     0001  2019-01-04 -174.4    None  2019-01-04  2019-01-04      183.0   \n",
-       "1     0001  2019-01-24 -173.7    None  2019-01-24  2019-01-24      183.0   \n",
-       "2     0001  2019-03-17 -174.4    None  2019-03-17  2019-03-17      183.0   \n",
-       "3     000R  2019-08-15   15.0    None  2019-12-20  2019-08-15      481.0   \n",
-       "4     000Y  2019-09-18  -84.4    None  2019-09-24  2019-09-24      183.0   \n",
-       "..     ...         ...    ...     ...         ...         ...        ...   \n",
-       "995   00UX  2019-12-17   -2.7    None  2020-01-20  2019-12-17      183.0   \n",
-       "996   00UX  2020-02-11    7.5    None  2020-02-12  2020-02-12      183.0   \n",
-       "997   00UX  2020-02-21    7.1    None  2020-03-16  2020-02-21      183.0   \n",
-       "998   00UX  2020-03-25    5.4    None  2020-03-25  2020-03-25      183.0   \n",
-       "999   00UX  2020-03-27   14.3    None  2020-03-27  2020-03-27     3037.0   \n",
-       "\n",
-       "       analys   permno  \n",
-       "0     48368.0  14392.0  \n",
-       "1     48368.0  14392.0  \n",
-       "2     48368.0  14392.0  \n",
-       "3    114029.0  14378.0  \n",
-       "4    162718.0  14436.0  \n",
-       "..        ...      ...  \n",
-       "995  107332.0  15647.0  \n",
-       "996  107332.0  15647.0  \n",
-       "997  107332.0  15647.0  \n",
-       "998  107332.0  15647.0  \n",
-       "999  136937.0  15647.0  \n",
-       "\n",
-       "[1000 rows x 9 columns]"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "epsdu"
    ]
   },
   {
