using module constants as globals inside module functions

--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -5,17 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wrds_compa\n",
+    "# compa\n",
     "\n",
     "> Retrieve and process data from WRDS Compustat Annual"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since this is a proprietary dataset, in the documentation below, I can not show any of the data that is being retrieved/generated (will show only column names)."
    ]
   },
   {
@@ -53,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "#| exports\n",
     "PROVIDER = 'Wharton Research Data Services (WRDS)'\n",
     "URL = 'https://wrds-www.wharton.upenn.edu/pages/get-data/center-research-security-prices-crsp/annual-update/crspcompustat-merged/fundamentals-annual/'\n",
     "LIBRARY = 'comp'\n",
@@ -240,6 +232,8 @@
     }
    ],
    "source": [
+    "#| eval: false\n",
+    "#| hide\n",
     "raw_metadata()"
    ]
   },
@@ -800,8 +794,7 @@
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`. If `df` is None, downloads `vars` using `download` function.\"\"\"\n",
     "\n",
     "    if df is None: df = download(vars=vars, obs_limit=obs_limit,  wrds_username=wrds_username, start_date=start_date, end_date=end_date)\n",
-    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_CLEAN_DSET, \n",
-    "                         time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
+    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_CLEAN_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
     "    return df "
    ]
   },
