--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -20,7 +20,7 @@
     "- A `pandas.Period` date reflecting the frequency of the data (for time-series datasets), or\n",
     "- A `pandas.MultiIndex` with a panel identifier in the first dimension and a `pandas.Period` date in the second dimension (for panel datasets).\n",
     "\n",
-    "The period date in the index will be named following the pattern `Xdate` where X is the string literal representing the frequency of the data (e.g. `Mdate` for monthly data, `Qdate` for quarterly data, `Adate` for annual data)."
+    "The period date in the index will be named following the pattern `Xdate` where X is the string literal representing the frequency of the data (e.g. `Mdate` for monthly data, `Qdate` for quarterly data, `Ydate` for annual data)."
    ]
   },
   {
