integrated module-level constants in all modules

--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wrds_crspm\n",
+    "# crspm\n",
     "\n",
     "> Retrieve and process data from WRDS CRSP Monthly Stock File"
    ]
@@ -541,9 +541,9 @@
     "                        LEFT JOIN {LIBRARY}.{DELIST_TABLE} as c\n",
     "                            ON a.permno=c.permno AND date_trunc('month', a.date) = date_trunc('month', c.dlstdt)                            \n",
     "                \"\"\"\n",
-    "    if start_date is not None: sql_string += r\"AND date >= %(start_date)s\"\n",
-    "    if end_date is not None: sql_string += r\"AND date <= %(end_date)s\"\n",
-    "    if obs_limit is not None: sql_string += r\"LIMIT %(obs_limit)s\"\n",
+    "    if start_date is not None: sql_string += r\" AND date >= %(start_date)s\"\n",
+    "    if end_date is not None: sql_string += r\" AND date <= %(end_date)s\"\n",
+    "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
     "\n",
     "    df = wrds_api.download(sql_string, wrds_username=wrds_username, \n",
     "                             params={'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})\n",
