--- a/nbs/01_wrds/02_crspd.ipynb
+++ b/nbs/01_wrds/02_crspd.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wrds_crspd\n",
+    "# crspd\n",
     "\n",
     "> Retrieve and process data from WRDS CRSP Securities Daily "
    ]
