--- a/nbs/01_wrds/04_compq.ipynb
+++ b/nbs/01_wrds/04_compq.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wrds_compq\n",
+    "# compq\n",
     "\n",
     "> Retrieve and process data from WRDS Compustat Quarterly"
    ]
