--- a/nbs/01_wrds/05_ratios.ipynb
+++ b/nbs/01_wrds/05_ratios.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wrds_ratios\n",
+    "# ratios\n",
     "\n",
     "> Retrieve and process data from WRDS Financial Ratios Suite."
    ]
@@ -45,12 +45,24 @@
     "smoothing. Hence researchers are advised to censor/smooth the raw ratios to get rid of the\n",
     "extreme outliers before conducting further analysis.\n",
     "\n",
+    "***\n",
+    "\n",
+    "`public_date`: date on which the information was available to the public\n",
+    "\n",
+    "`adate`: fiscal year to which the information pertains\n",
+    "\n",
+    "`qdate`: fiscal quarter to which the information pertains\n",
+    "\n",
+    "***\n",
+    "\n",
     "### NOTE:\n",
     "- This dataset has three variables that are in levels (apart from the ID variables): `be`, `mktcap`, and `price` (i.e. book equity, market cap, and stock price).\n",
     "\n",
     "- Excludes financials.\n",
     "\n",
-    "- ID variables are: permno, gvkey, ticker, cusip, public_date, adate, qdate, gsector, gicdesc, and all variables starting with \"ffi\""
+    "- ID variables are: permno, gvkey, ticker, cusip, public_date, adate, qdate, gsector, gicdesc, and all variables starting with \"ffi\"\n",
+    "\n",
+    "***"
    ]
   },
   {
@@ -80,6 +92,26 @@
     "import pandasmore as pdm\n",
     "from finsets.wrds import wrds_api\n",
     "from finsets import RESOURCES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| exports\n",
+    "PROVIDER = 'Wharton Research Data Services (WRDS)'\n",
+    "URL = 'https://wrds-www.wharton.upenn.edu/pages/get-data/financial-ratios-suite-wrds/financial-ratios-with-ibes-subscription/financial-ratios-firm-level-ibes/'\n",
+    "LIBRARY = 'wrdsapps_finratio_ibes'\n",
+    "TABLE = 'firm_ratio_ibes'\n",
+    "FREQ = 'M'\n",
+    "MIN_YEAR = 1970\n",
+    "MAX_YEAR = None\n",
+    "ENTITY_ID_IN_RAW_DSET = 'permno'\n",
+    "ENTITY_ID_IN_CLEAN_DSET = 'permno'\n",
+    "TIME_VAR_IN_RAW_DSET = 'public_date'\n",
+    "TIME_VAR_IN_CLEAN_DSET = 'Mdate'"
    ]
   },
   {
@@ -287,7 +319,7 @@
     "#| export\n",
     "def raw_metadata_extra(wrds_username: str=None\n",
     "             ) -> pd.DataFrame:\n",
-    "    \"Collects metadata from WRDS `wrdsapps_finratio_ibes.firm_ratio_ibes` and merges it with `variable_labels`.\"\n",
+    "    \"Collects metadata from WRDS `{LIBRARY}.{TABLE}` and merges it with `variable_labels`.\"\n",
     "\n",
     "    if wrds_username is None:\n",
     "        wrds_username = os.getenv('WRDS_USERNAME')\n",
@@ -295,15 +327,15 @@
     "\n",
     "    try:\n",
     "        db = wrds_api.Connection(wrds_username = wrds_username)\n",
-    "        finr = db.describe_table('wrdsapps_finratio_ibes','firm_ratio_ibes')\n",
-    "        finr_rows = db.get_row_count('wrdsapps_finratio_ibes','firm_ratio_ibes')\n",
+    "        finr = db.describe_table(LIBRARY,TABLE)\n",
+    "        finr_rows = db.get_row_count(LIBRARY,TABLE)\n",
     "    finally:\n",
     "        db.close()\n",
     "        \n",
     "    finr_meta = finr[['name','type']].copy()\n",
     "    finr_meta['nr_rows'] = finr_rows\n",
-    "    finr_meta['wrds_library'] = 'wrdsapps_finratio_ibes'\n",
-    "    finr_meta['wrds_table'] = 'firm_ratio_ibes'\n",
+    "    finr_meta['wrds_library'] = LIBRARY\n",
+    "    finr_meta['wrds_table'] = TABLE\n",
     "\n",
     "    df = finr_meta.merge(raw_metadata()[['name','label']], how='left', on='name')\n",
     "    \n",
@@ -536,23 +568,23 @@
     "def download(vars: List[str]=None, # If None, downloads all variables\n",
     "             obs_limit: int=None, #Number of rows to download. If None, full dataset will be downloaded\n",
     "             wrds_username: str=None, #If None, looks for WRDS_USERNAME with `os.getenv`, then prompts you if needed\n",
-    "             start_date: str=\"01/01/1900\", # Start date in MM/DD/YYYY format\n",
-    "             end_date: str=None #End date in MM/DD/YYYY format; if None, defaults to current date\n",
+    "             start_date: str=None, # Start date in MM/DD/YYYY format\n",
+    "             end_date: str=None #End date in MM/DD/YYYY format\n",
     "             ) -> pd.DataFrame:\n",
-    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `wrdsapps_finratio_ibes.firm_ratio_ibes` library\"\"\"\n",
+    "    \"\"\"Downloads `vars` from `start_date` to `end_date` from WRDS `{LIBRARY}.{TABLE}` library\"\"\"\n",
     "\n",
     "    if vars is None: \n",
     "        vars = '*'\n",
     "    else:\n",
     "        vars = ','.join(['public_date','permno'] + [f'{x}' for x in vars if x not in ['public_date', 'permno']])\n",
     "\n",
-    "    limit_clause = f\"LIMIT {obs_limit}\" if obs_limit is not None else \"\"\n",
-    "    sql_string=f\"\"\"SELECT  {vars}\n",
-    "                    FROM wrdsapps_finratio_ibes.firm_ratio_ibes\n",
-    "                    WHERE public_date BETWEEN '{start_date}' AND COALESCE(%(end)s, CURRENT_DATE)\n",
-    "                    {limit_clause}\n",
-    "                \"\"\"\n",
-    "    return wrds_api.download(sql_string, wrds_username=wrds_username, params={'end':end_date})"
+    "    sql_string=f\"\"\"SELECT {vars} FROM {LIBRARY}.{TABLE} WHERE 1 = 1 \"\"\"\n",
+    "    if start_date is not None: sql_string += r\" AND public_date >= %(start_date)s\"\n",
+    "    if end_date is not None: sql_string += r\" AND public_date <= %(end_date)s\"\n",
+    "    if obs_limit is not None: sql_string += r\" LIMIT %(obs_limit)s\"\n",
+    "\n",
+    "    return wrds_api.download(sql_string, wrds_username=wrds_username, \n",
+    "                             params={'start_date':start_date, 'end_date':end_date, 'obs_limit':obs_limit})"
    ]
   },
   {
@@ -1114,7 +1146,7 @@
     "    \"\"\"Applies `pandasmore.setup_panel` to `df`. If `df` is None, downloads `vars` using `download` function.\"\"\"\n",
     "\n",
     "    if df is None: df = download(vars=vars, obs_limit=obs_limit, wrds_username=wrds_username, start_date=start_date, end_date=end_date)\n",
-    "    df = pdm.setup_panel(df, panel_ids='permno', time_var='public_date', freq='M', **clean_kwargs)\n",
+    "    df = pdm.setup_panel(df, panel_ids=ENTITY_ID_IN_CLEAN_DSET, time_var=TIME_VAR_IN_RAW_DSET, freq=FREQ, **clean_kwargs)\n",
     "    return df "
    ]
   },
