added storage class

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -64,7 +64,52 @@
    "outputs": [],
    "source": [
     "#| exports \n",
-    "METADATA_FILE = RESOURCES/'all_metadata.pkl'"
+    "METADATA_ALL = RESOURCES/'all_metadata.pkl'\n",
+    "METADATA_RAW = RESOURCES/'all_metadata.pkl'\n",
+    "METADATA_FEATURES = RESOURCES/'all_metadata.pkl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def list_datasets(submodules: list=['wrds', 'papers'] # list of submodules to collect metadata from\n",
+    "                      ) -> pd.DataFrame:\n",
+    "    \"Go through `submodules` of `finsets` and print their names out\"\n",
+    "    \n",
+    "    for name in submodules:\n",
+    "        module = import_module(f'finsets.{name}')\n",
+    "        for sub in dir(module):\n",
+    "            if sub.startswith('_'): continue\n",
+    "            print(f'{name}.{sub}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wrds.compa\n",
+      "wrds.compq\n",
+      "wrds.crspd\n",
+      "wrds.crspm\n",
+      "wrds.ibes_ltg\n",
+      "wrds.linking\n",
+      "wrds.ratios\n",
+      "wrds.wrds_api\n",
+      "papers.hassan_etal_2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "list_datasets()"
    ]
   },
   {
@@ -401,11 +446,14 @@
      "text": [
       "Loading library list...\n",
       "Done\n",
-      "Approximately 881742 rows in comp.funda.\n",
+      "Approximately 881747 rows in comp.funda.\n",
       "Loading library list...\n",
       "Done\n",
       "Approximately 4922867 rows in crsp.msf.\n",
       "Approximately 111623 rows in crsp.msenames.\n",
+      "Loading library list...\n",
+      "Done\n",
+      "Approximately 31823580 rows in ibes.detu_epsus.\n",
       "Loading library list...\n",
       "Done\n",
       "Approximately 2750800 rows in wrdsapps_finratio_ibes.firm_ratio_ibes.\n"
@@ -437,8 +485,6 @@
        "      <th>output_of</th>\n",
        "      <th>type</th>\n",
        "      <th>nr_rows</th>\n",
-       "      <th>LIBRARY</th>\n",
-       "      <th>TABLE</th>\n",
        "      <th>wrds_library</th>\n",
        "      <th>wrds_table</th>\n",
        "      <th>group</th>\n",
@@ -451,11 +497,9 @@
        "      <td>Global Company Key</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(6)</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -464,11 +508,9 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>DATE</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -477,11 +519,9 @@
        "      <td>Data Year - Fiscal</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -490,11 +530,9 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(12)</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -503,11 +541,9 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(2)</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -520,77 +556,65 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1085</th>\n",
+       "      <th>1106</th>\n",
        "      <td>ffi48</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.ratios.download</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
        "      <td>2750800</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrdsapps_finratio_ibes</td>\n",
        "      <td>firm_ratio_ibes</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1086</th>\n",
+       "      <th>1107</th>\n",
        "      <td>ffi49_desc</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.ratios.download</td>\n",
        "      <td>VARCHAR(5)</td>\n",
        "      <td>2750800</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrdsapps_finratio_ibes</td>\n",
        "      <td>firm_ratio_ibes</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1087</th>\n",
+       "      <th>1108</th>\n",
        "      <td>ffi49</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.ratios.download</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
        "      <td>2750800</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrdsapps_finratio_ibes</td>\n",
        "      <td>firm_ratio_ibes</td>\n",
        "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1088</th>\n",
+       "      <th>1109</th>\n",
        "      <td>ticker</td>\n",
        "      <td>EXCHANGE TICKER SYMBOL - HISTORICAL</td>\n",
        "      <td>wrds.ratios.download</td>\n",
        "      <td>VARCHAR(8)</td>\n",
        "      <td>2750800</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrdsapps_finratio_ibes</td>\n",
        "      <td>firm_ratio_ibes</td>\n",
        "      <td>ID</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1089</th>\n",
+       "      <th>1110</th>\n",
        "      <td>cusip</td>\n",
        "      <td>CUSIP IDENTIFIER - HISTORICAL</td>\n",
        "      <td>wrds.ratios.download</td>\n",
        "      <td>VARCHAR(8)</td>\n",
        "      <td>2750800</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
-       "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrdsapps_finratio_ibes</td>\n",
        "      <td>firm_ratio_ibes</td>\n",
        "      <td>ID</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1090 rows × 10 columns</p>\n",
+       "<p>1111 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -601,39 +625,26 @@
        "3         indfmt                                  <NA>   wrds.compa.download   \n",
        "4         consol                                  <NA>   wrds.compa.download   \n",
        "...          ...                                   ...                   ...   \n",
-       "1085       ffi48                                  <NA>  wrds.ratios.download   \n",
-       "1086  ffi49_desc                                  <NA>  wrds.ratios.download   \n",
-       "1087       ffi49                                  <NA>  wrds.ratios.download   \n",
-       "1088      ticker  EXCHANGE TICKER SYMBOL - HISTORICAL   wrds.ratios.download   \n",
-       "1089       cusip        CUSIP IDENTIFIER - HISTORICAL   wrds.ratios.download   \n",
+       "1106       ffi48                                  <NA>  wrds.ratios.download   \n",
+       "1107  ffi49_desc                                  <NA>  wrds.ratios.download   \n",
+       "1108       ffi49                                  <NA>  wrds.ratios.download   \n",
+       "1109      ticker  EXCHANGE TICKER SYMBOL - HISTORICAL   wrds.ratios.download   \n",
+       "1110       cusip        CUSIP IDENTIFIER - HISTORICAL   wrds.ratios.download   \n",
        "\n",
-       "                  type  nr_rows LIBRARY  TABLE            wrds_library  \\\n",
-       "0           VARCHAR(6)   881742    comp  funda                    <NA>   \n",
-       "1                 DATE   881742    comp  funda                    <NA>   \n",
-       "2     DOUBLE_PRECISION   881742    comp  funda                    <NA>   \n",
-       "3          VARCHAR(12)   881742    comp  funda                    <NA>   \n",
-       "4           VARCHAR(2)   881742    comp  funda                    <NA>   \n",
-       "...                ...      ...     ...    ...                     ...   \n",
-       "1085  DOUBLE_PRECISION  2750800    <NA>   <NA>  wrdsapps_finratio_ibes   \n",
-       "1086        VARCHAR(5)  2750800    <NA>   <NA>  wrdsapps_finratio_ibes   \n",
-       "1087  DOUBLE_PRECISION  2750800    <NA>   <NA>  wrdsapps_finratio_ibes   \n",
-       "1088        VARCHAR(8)  2750800    <NA>   <NA>  wrdsapps_finratio_ibes   \n",
-       "1089        VARCHAR(8)  2750800    <NA>   <NA>  wrdsapps_finratio_ibes   \n",
+       "                  type  nr_rows            wrds_library       wrds_table group  \n",
+       "0           VARCHAR(6)   881747                    comp            funda  <NA>  \n",
+       "1                 DATE   881747                    comp            funda  <NA>  \n",
+       "2     DOUBLE_PRECISION   881747                    comp            funda  <NA>  \n",
+       "3          VARCHAR(12)   881747                    comp            funda  <NA>  \n",
+       "4           VARCHAR(2)   881747                    comp            funda  <NA>  \n",
+       "...                ...      ...                     ...              ...   ...  \n",
+       "1106  DOUBLE_PRECISION  2750800  wrdsapps_finratio_ibes  firm_ratio_ibes  <NA>  \n",
+       "1107        VARCHAR(5)  2750800  wrdsapps_finratio_ibes  firm_ratio_ibes  <NA>  \n",
+       "1108  DOUBLE_PRECISION  2750800  wrdsapps_finratio_ibes  firm_ratio_ibes  <NA>  \n",
+       "1109        VARCHAR(8)  2750800  wrdsapps_finratio_ibes  firm_ratio_ibes    ID  \n",
+       "1110        VARCHAR(8)  2750800  wrdsapps_finratio_ibes  firm_ratio_ibes    ID  \n",
        "\n",
-       "           wrds_table group  \n",
-       "0                <NA>  <NA>  \n",
-       "1                <NA>  <NA>  \n",
-       "2                <NA>  <NA>  \n",
-       "3                <NA>  <NA>  \n",
-       "4                <NA>  <NA>  \n",
-       "...               ...   ...  \n",
-       "1085  firm_ratio_ibes  <NA>  \n",
-       "1086  firm_ratio_ibes  <NA>  \n",
-       "1087  firm_ratio_ibes  <NA>  \n",
-       "1088  firm_ratio_ibes    ID  \n",
-       "1089  firm_ratio_ibes    ID  \n",
-       "\n",
-       "[1090 rows x 10 columns]"
+       "[1111 rows x 8 columns]"
       ]
      },
      "execution_count": null,
