--- a/nbs/01_wrds/00_wrds_api.ipynb
+++ b/nbs/01_wrds/00_wrds_api.ipynb
@@ -712,6 +712,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "::: {.callout-caution}\n",
+    "The context manager does not seem to close connections properly. To be safe, don't use it as below:\n",
+    "```python\n",
+    "   with Connection(wrds_username = wrds_username) as db:\n",
+    "       df = db.raw_sql(sql=sql_string, params=params)\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -727,10 +740,6 @@
     "    if wrds_username is None:\n",
     "        wrds_username = os.getenv('WRDS_USERNAME')\n",
     "        if wrds_username is None: wrds_username = input(\"Enter your WRDS username: \") \n",
-    "\n",
-    "    #The context manager does not seem to close connections properly\n",
-    "    #with Connection(wrds_username = wrds_username) as db:\n",
-    "    #    df = db.raw_sql(sql=sql_string, params=params)\n",
     "\n",
     "    try:\n",
     "        db = Connection(wrds_username=os.getenv('WRDS_USERNAME'))\n",
@@ -748,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function will prompt the user for their WRDS password, unless a `WRDS_PASS` environment variable is set up (not recommended unless it's in an encrypted location like a GitHub secret) or unless a `pgpass` file is set up (recommended)."
+    "This function will prompt the user for their WRDS password, unless a `WRDS_PASS` environment variable is set up (not recommended unless it's in an encrypted location like a GitHub Secret) or unless a `pgpass` file is set up (recommended)."
    ]
   },
   {
