--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -86,8 +86,8 @@
     "\n",
     "    meta = funda[['name','type']].copy()\n",
     "    meta['nr_rows'] = nr_rows\n",
-    "    meta['LIBRARY'] = LIBRARY\n",
-    "    meta['TABLE'] = TABLE\n",
+    "    meta['wrds_library'] = LIBRARY\n",
+    "    meta['wrds_table'] = TABLE\n",
     "\n",
     "    # Get variable labels from LABELS_FILE\n",
     "    df = pd.read_csv(LABELS_FILE)\n",
@@ -118,7 +118,7 @@
      "text": [
       "Loading library list...\n",
       "Done\n",
-      "Approximately 881742 rows in comp.funda.\n"
+      "Approximately 881747 rows in comp.funda.\n"
      ]
     },
     {
@@ -147,8 +147,8 @@
        "      <th>output_of</th>\n",
        "      <th>type</th>\n",
        "      <th>nr_rows</th>\n",
-       "      <th>LIBRARY</th>\n",
-       "      <th>TABLE</th>\n",
+       "      <th>wrds_library</th>\n",
+       "      <th>wrds_table</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -158,7 +158,7 @@
        "      <td>Global Company Key</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(6)</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -168,7 +168,7 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>DATE</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -178,7 +178,7 @@
        "      <td>Data Year - Fiscal</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>DOUBLE_PRECISION</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -188,7 +188,7 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(12)</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -198,7 +198,7 @@
        "      <td>&lt;NA&gt;</td>\n",
        "      <td>wrds.compa.download</td>\n",
        "      <td>VARCHAR(2)</td>\n",
-       "      <td>881742</td>\n",
+       "      <td>881747</td>\n",
        "      <td>comp</td>\n",
        "      <td>funda</td>\n",
        "    </tr>\n",
@@ -214,12 +214,12 @@
        "3    indfmt                 <NA>  wrds.compa.download       VARCHAR(12)   \n",
        "4    consol                 <NA>  wrds.compa.download        VARCHAR(2)   \n",
        "\n",
-       "  nr_rows LIBRARY  TABLE  \n",
-       "0  881742    comp  funda  \n",
-       "1  881742    comp  funda  \n",
-       "2  881742    comp  funda  \n",
-       "3  881742    comp  funda  \n",
-       "4  881742    comp  funda  "
+       "  nr_rows wrds_library wrds_table  \n",
+       "0  881747         comp      funda  \n",
+       "1  881747         comp      funda  \n",
+       "2  881747         comp      funda  \n",
+       "3  881747         comp      funda  \n",
+       "4  881747         comp      funda  "
       ]
      },
      "execution_count": null,
