--- a/nbs/01_wrds/02_crspd.ipynb
+++ b/nbs/01_wrds/02_crspd.ipynb
@@ -31,12 +31,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export \n",
+    "def download():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "python3",
+   "language": "python",
+   "name": "python3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
