added metadata, storage, and dataloader modules. changed wrds_api.Connection to look for wrds_username env automatically

--- a/nbs/01_storage.ipynb
+++ b/nbs/01_storage.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "from abc import ABC, abstractmethod\n",
     "from pathlib import Path\n",
     "import os \n",
