--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from finsets import fred, wrds, papers"
+    "from finsets import fred, wrds, papers, metadata"
    ]
   },
   {
@@ -211,7 +211,7 @@
     }
    ],
    "source": [
-    "fds.features_metadata().head()"
+    "metadata.features_metadata().head()"
    ]
   },
   {
@@ -240,85 +240,125 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>label</th>\n",
-       "      <th>output_of</th>\n",
-       "      <th>inputs</th>\n",
-       "      <th>inputs_generated_by</th>\n",
-       "      <th>type</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>LABEL</th>\n",
+       "      <th>OUTPUT_OF</th>\n",
+       "      <th>INPUTS</th>\n",
+       "      <th>INPUTS_GENERATED_BY</th>\n",
+       "      <th>TYPE</th>\n",
+       "      <th>NR_ROWS</th>\n",
+       "      <th>WRDS_LIBRARY</th>\n",
+       "      <th>WRDS_TABLE</th>\n",
+       "      <th>GROUP</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SCORE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>110</th>\n",
+       "      <th>100</th>\n",
        "      <td>at</td>\n",
        "      <td>Assets - Total</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
+       "      <td>wrds.compa.download</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>double</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>881760</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>capx2la</td>\n",
-       "      <td>CAPX to lagged assets</td>\n",
-       "      <td>wrds.compa.investment_vars</td>\n",
-       "      <td>ppent,capx,at</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
+       "      <th>75</th>\n",
+       "      <td>act</td>\n",
+       "      <td>Current Assets - Total</td>\n",
+       "      <td>wrds.compa.download</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>881760</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>cflow2la_is</td>\n",
-       "      <td>Operating cash flows to lagged assets</td>\n",
-       "      <td>wrds.compa.cashflow_vars</td>\n",
-       "      <td>dtdate,oancf,ib,dp,at</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
+       "      <th>75</th>\n",
+       "      <td>ao</td>\n",
+       "      <td>Assets - Other</td>\n",
+       "      <td>wrds.compa.download</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>881760</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>cflow2la_cfs</td>\n",
-       "      <td>Operating cash flows to lagged assets</td>\n",
-       "      <td>wrds.compa.cashflow_vars</td>\n",
-       "      <td>dtdate,oancf,ib,dp,at</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
+       "      <th>71</th>\n",
+       "      <td>batr</td>\n",
+       "      <td>Benefits Assumed - Total</td>\n",
+       "      <td>wrds.compa.download</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>881760</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>cflow2la_full</td>\n",
-       "      <td>Operating cash flows to lagged assets</td>\n",
-       "      <td>wrds.compa.cashflow_vars</td>\n",
-       "      <td>dtdate,oancf,ib,dp,at</td>\n",
-       "      <td>wrds.compa.clean</td>\n",
+       "      <th>69</th>\n",
+       "      <td>dptb</td>\n",
+       "      <td>Deposits - Total - Banks</td>\n",
+       "      <td>wrds.compa.download</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DOUBLE_PRECISION</td>\n",
+       "      <td>881760</td>\n",
+       "      <td>comp</td>\n",
+       "      <td>funda</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              name                                  label  \\\n",
-       "110             at                        Assets - Total    \n",
-       "10         capx2la                  CAPX to lagged assets   \n",
-       "12     cflow2la_is  Operating cash flows to lagged assets   \n",
-       "13    cflow2la_cfs  Operating cash flows to lagged assets   \n",
-       "14   cflow2la_full  Operating cash flows to lagged assets   \n",
+       "       NAME                      LABEL            OUTPUT_OF INPUTS  \\\n",
+       "SCORE                                                                \n",
+       "100      at            Assets - Total   wrds.compa.download    NaN   \n",
+       "75      act    Current Assets - Total   wrds.compa.download    NaN   \n",
+       "75       ao            Assets - Other   wrds.compa.download    NaN   \n",
+       "71     batr  Benefits Assumed - Total   wrds.compa.download    NaN   \n",
+       "69     dptb  Deposits - Total - Banks   wrds.compa.download    NaN   \n",
        "\n",
-       "                      output_of                 inputs inputs_generated_by  \\\n",
-       "110            wrds.compa.clean                    NaN                 NaN   \n",
-       "10   wrds.compa.investment_vars          ppent,capx,at    wrds.compa.clean   \n",
-       "12     wrds.compa.cashflow_vars  dtdate,oancf,ib,dp,at    wrds.compa.clean   \n",
-       "13     wrds.compa.cashflow_vars  dtdate,oancf,ib,dp,at    wrds.compa.clean   \n",
-       "14     wrds.compa.cashflow_vars  dtdate,oancf,ib,dp,at    wrds.compa.clean   \n",
+       "      INPUTS_GENERATED_BY              TYPE NR_ROWS WRDS_LIBRARY WRDS_TABLE  \\\n",
+       "SCORE                                                                         \n",
+       "100                   NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
+       "75                    NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
+       "75                    NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
+       "71                    NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
+       "69                    NaN  DOUBLE_PRECISION  881760         comp      funda   \n",
        "\n",
-       "       type  \n",
-       "110  double  \n",
-       "10      NaN  \n",
-       "12      NaN  \n",
-       "13      NaN  \n",
-       "14      NaN  "
+       "      GROUP  \n",
+       "SCORE        \n",
+       "100    <NA>  \n",
+       "75     <NA>  \n",
+       "75     <NA>  \n",
+       "71     <NA>  \n",
+       "69     <NA>  "
       ]
      },
      "execution_count": null,
@@ -327,7 +367,7 @@
     }
    ],
    "source": [
-    "fds.search('total assets').head()"
+    "metadata.search('total assets').head()"
    ]
   },
   {
@@ -374,8 +414,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WRDS recommends setting up a .pgpass file.\n",
-      "You can create this file yourself at any time with the create_pgpass_file() function.\n",
       "Loading library list...\n",
       "Done\n"
      ]
@@ -503,29 +541,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2022Q1</th>\n",
-       "      <td>2022-01-01</td>\n",
-       "      <td>24740.480</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022Q2</th>\n",
-       "      <td>2022-04-01</td>\n",
-       "      <td>25248.476</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2022Q3</th>\n",
        "      <td>2022-07-01</td>\n",
-       "      <td>25723.941</td>\n",
+       "      <td>25994.639</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022Q4</th>\n",
        "      <td>2022-10-01</td>\n",
-       "      <td>26137.992</td>\n",
+       "      <td>26408.405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023Q1</th>\n",
        "      <td>2023-01-01</td>\n",
-       "      <td>26529.774</td>\n",
+       "      <td>26813.601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q2</th>\n",
+       "      <td>2023-04-01</td>\n",
+       "      <td>27063.012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023Q3</th>\n",
+       "      <td>2023-07-01</td>\n",
+       "      <td>27623.543</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -534,11 +572,11 @@
       "text/plain": [
        "           dtdate  Nominal GDP\n",
        "Qdate                         \n",
-       "2022Q1 2022-01-01    24740.480\n",
-       "2022Q2 2022-04-01    25248.476\n",
-       "2022Q3 2022-07-01    25723.941\n",
-       "2022Q4 2022-10-01    26137.992\n",
-       "2023Q1 2023-01-01    26529.774"
+       "2022Q3 2022-07-01    25994.639\n",
+       "2022Q4 2022-10-01    26408.405\n",
+       "2023Q1 2023-01-01    26813.601\n",
+       "2023Q2 2023-04-01    27063.012\n",
+       "2023Q3 2023-07-01    27623.543"
       ]
      },
      "execution_count": null,
